# bdd-manage

./: .gitignore  README.md  apache.conf  lista-ejemplo.csv  lista_alumnos.csv.example  manage-users.py  manage_users.py  pyproject.toml  setup.sh  userctl  userctl.py
app/: canvas.py  io.py  main.py  report.py  run.py  scan.py  subrun.py  sync.py  types.py  util.py
test/: Dockerfile  compose.yaml  connect.sh  reupload.sh  test.sh
